--- a/app/src/main/res/layout/activity_permissions_test.xml
+++ b/app/src/main/res/layout/activity_permissions_test.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.torridas.permissionstest.PermissionsTest">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -35,18 +35,30 @@
             android:padding="@dimen/basicPadding"
             android:id="@+id/btn_save"/>
     </LinearLayout>
-    <ImageView
+
+    <FrameLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintVertical_weight="1"
-        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/butoane"
+        app:layout_constraintTop_toBottomOf="@+id/imagine"
+        android:id="@+id/frame" >
+    </FrameLayout>
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintVertical_weight="2"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/butoane"
+        app:layout_constraintBottom_toTopOf="@+id/frame"
         android:id="@+id/imagine"
         android:layout_margin="@dimen/basicMargin"
-        android:padding="@dimen/basicPadding"/>
+        android:padding="@dimen/basicPadding" />
+
 
 
 </android.support.constraint.ConstraintLayout>
