--- a/app/src/main/res/layout/activity_permissions_test.xml
+++ b/app/src/main/res/layout/activity_permissions_test.xml
@@ -34,6 +34,16 @@
             android:layout_margin="@dimen/basicMargin"
             android:padding="@dimen/basicPadding"
             android:id="@+id/btn_save"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/btn_share"
+            android:textSize="@dimen/btn_text"
+            android:textAllCaps="false"
+            android:layout_margin="@dimen/basicMargin"
+            android:padding="@dimen/basicPadding"
+            android:id="@+id/btn_share"/>
     </LinearLayout>
 
     <FrameLayout
@@ -50,7 +60,7 @@
     <ImageView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintVertical_weight="2"
+        app:layout_constraintVertical_weight="1"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
